--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
-/*  your css code here. If applicable */
+body{
+	background-color:rgb(135, 206, 235);
+}
+article p:first-child{
+	color:white;
+	background-color:black;
+}
+article p:nth-child(2){
+	color:solid;
+}
+article p:last-child{
+	color:red;
+}
+ul{
+	background-color:gray;
+	width:50%;
+	padding:10px;
+}
+ul li:first-child{
+	background-color:white;
+	font-size:22px;
+}
+ul li:last-child{
+	background-color:white;
+	font-size:22px;
+}
+ul li:nth-child(3){
+	background-color:pink;
+}
+
+
+
+
+
+
+
